--- a/studio_customization/views/stock_picking_inherit.xml
+++ b/studio_customization/views/stock_picking_inherit.xml
@@ -21,13 +21,13 @@
                   </xpath>
                   <xpath expr="//field[@name='date_done']" position="before">
                     <field name="delivery_method" string="Delivery Method" attrs="{}" invisible="1"/>
-                    <field name="po_" string="PO # " attrs="{&quot;invisible&quot;: [[&quot;operation_type&quot;,&quot;!=&quot;,&quot;PO Receipts&quot;]]}"/>
-                    <field name="invoice_number" attrs="{&quot;invisible&quot;: [[&quot;operation_type&quot;,&quot;!=&quot;,&quot;PO Receipts&quot;]]}"/>
-                    <field name="so_" string="SO #" attrs="{&quot;invisible&quot;: [[&quot;operation_type&quot;,&quot;!=&quot;,&quot;PO Receipts&quot;]]}"/>
-                    <field name="bill_reference_" string="Bill Reference #" attrs="{&quot;invisible&quot;: [[&quot;operation_type&quot;,&quot;!=&quot;,&quot;PO Receipts&quot;]]}"/>
-                    <field name="global_comments" string="Global Comments:" attrs="{&quot;invisible&quot;: [[&quot;operation_type_id&quot;,&quot;!=&quot;,2]]}"/>
-                    <field name="warehouse_notes_1" string="Warehouse Notes:" attrs="{&quot;invisible&quot;: [[&quot;operation_type_id&quot;,&quot;!=&quot;,2]]}"/>
-                    <field name="customer_po_onPickSlip" attrs="{&quot;invisible&quot;: [[&quot;operation_type_id&quot;,&quot;!=&quot;,2]]}"/>
+                    <field name="po_" string="PO # " attrs="{'invisible': [['operation_type','!=','PO Receipts']]}"/>
+                    <field name="invoice_number" attrs="{'invisible': [['operation_type','!=','PO Receipts']]}"/>
+                    <field name="so_" string="SO #" attrs="{'invisible': [['operation_type','!=','PO Receipts']]}"/>
+                    <field name="bill_reference_" string="Bill Reference #" attrs="{'invisible': [['operation_type','!=','PO Receipts']]}"/>
+                    <field name="global_comments" string="Global Comments:" attrs="{'invisible': [['operation_type_id','!=',2]]}"/>
+                    <field name="warehouse_notes_1" string="Warehouse Notes:" attrs="{'invisible': [['operation_type_id','!=',2]]}"/>
+                    <field name="customer_po_onPickSlip" attrs="{'invisible': [['operation_type_id','!=',2]]}"/>
                     <field name="operation_type" string="Operation Type" attrs="{}" invisible="1"/>
                     <field name="operation_type_id" string="Operation Type ID" attrs="{}" invisible="1"/>
                     <field name="stellar_status_picking" string="stellar_status_picking" attrs="{}" invisible="1"/>
@@ -36,8 +36,8 @@
                     <attribute name="attrs">{}</attribute>
                   </xpath>
                   <xpath expr="//field[@name='date_done']" position="after">
-                    <field name="pink_slip" string="Pink Slip #:" attrs="{&quot;invisible&quot;: [[&quot;picking_type_id&quot;,&quot;!=&quot;,39]]}"/>
-                    <field name="argo_reference" string="Argo Reference #:" attrs="{&quot;invisible&quot;: [[&quot;picking_type_id&quot;,&quot;!=&quot;,39]]}"/>
+                    <field name="pink_slip" string="Pink Slip #:" attrs="{'invisible': [['picking_type_id','!=',39]]}"/>
+                    <field name="argo_reference" string="Argo Reference #:" attrs="{'invisible': [['picking_type_id','!=',39]]}"/>
                   </xpath>
 <!--                  <xpath expr="//field[@name='product_uom_id']" position="attributes">-->
 <!--                    <attribute name="attrs">{"readonly": [["state","!=","draft"]]}</attribute>-->
