Migration_14:- fix the issue of reports in product

--- a/studio_customization/report/report_dwjo.xml
+++ b/studio_customization/report/report_dwjo.xml
@@ -6,7 +6,7 @@
         model="product.product"
         report_type="qweb-pdf"
         file="report_dwjo"
-        name="stellar.report_dwjo"
+        name="studio_customization.report_dwjo"
         print_report_name="'Suggested Reorder Report (DWJO) - %s' % (object.name)"
         menu="True"
     />
