--- a/studio_customization/report/report_dwjo_template.xml
+++ b/studio_customization/report/report_dwjo_template.xml
@@ -98,7 +98,7 @@
 
 <template id="report_dwjo">
     <t t-call="web.html_container">
-        <t t-call="stellar.report_dwjo_document"/>
+        <t t-call="studio_customization.report_dwjo_document"/>
     </t>
 </template>
 
