--- a/studio_customization/views/sale_order_inherit.xml
+++ b/studio_customization/views/sale_order_inherit.xml
@@ -94,6 +94,20 @@
        </field>
    </record>
 
+       <!-- Inherit tree View to Modify it -->
+      <record id="sale_order_tree_inherit_studio" model="ir.ui.view">
+          <field name="name">sale.order.tree.inherit</field>
+          <field name="model">sale.order</field>
+          <field name="inherit_id" ref="sale.view_quotation_tree_with_onboarding"/>
+          <field name="arch" type="xml">
+               <xpath expr="//tree[1]/field[@name='state']" position="after">
+                    <field name="status_stellar"/>
+                    <field name="website_status_1"/>
+                 </xpath>
+          </field>
+      </record>
+
+
       <!-- sale order line inherit form -->
       <record id="sale_order_line_inherit_form" model="ir.ui.view">
           <field name="name">sale.order.line.form.inherit</field>
@@ -109,9 +123,9 @@
           </field>
       </record>
 
-      <!-- Inherit Form View to Modify it -->
+      <!-- Inherit Tree View to Modify it -->
       <record id="sale_order_line_studio_inherit" model="ir.ui.view">
-          <field name="name">sale.order.line.form.inherit</field>
+          <field name="name">sale.order.line.tree.inherit</field>
           <field name="model">sale.order.line</field>
           <field name="inherit_id" ref="sale.view_order_line_tree"/>
           <field name="arch" type="xml">
