--- a/studio_customization/views/purchase_order_inherit.xml
+++ b/studio_customization/views/purchase_order_inherit.xml
@@ -5,7 +5,7 @@
         <record id="purchase_order_tree_inherit_studio" model="ir.ui.view">
             <field name="name">purchase.order.tree.inherit</field>
             <field name="model">purchase.order</field>
-            <field name="inherit_id" ref="purchase.purchase_order_tree"/>
+            <field name="inherit_id" ref="purchase.purchase_order_kpis_tree"/>
             <field name="arch" type="xml">
                 <xpath expr="//field[@name='state']" position="after">
                     <field name="purchase_stellar_status" string="Stellar Status"/>
